main/default/objects/Logging_Level__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this field will track all the Error logs in the system.</description>
    <inlineHelpText>Checking this field will track all the Error logs in the system.</inlineHelpText>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>