main/default/objects/Logging_Level__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this field will track all the Info logs in the system.</description>
    <inlineHelpText>Checking this field will track all the Info logs in the system.</inlineHelpText>
    <label>Info</label>
    <type>Checkbox</type>
</CustomField>