main/default/objects/Logging_Level__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this field will track all the Success logs in the system.</description>
    <inlineHelpText>Checking this field will track all the Success logs in the system.</inlineHelpText>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>