main/default/objects/Logging_Level__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this field will track all the Warning logs in the system.</description>
    <inlineHelpText>Checking this field will track all the Warning logs in the system.</inlineHelpText>
    <label>Warning</label>
    <type>Checkbox</type>
</CustomField>